# RxInferClient.py

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  installation.md
docs/assets/: jupyter.css
docs/examples/: learning.ipynb  state-space-model.ipynb
docs/openapi/: README.md  docs
examples/state-space-model/: index.html
installation/: index.html
openapi/: index.html
openapi/client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
openapi/client/.openapi-generator/: FILES
openapi/client/docs/: AttachEventsToEpisodeRequest.md  AttachEventsToEpisodeRequestEventsInner.md  AttachMetadataToEventRequest.md  AuthenticationApi.md  AvailableModel.md  AvailableModelDetails.md  CreateEpisodeRequest.md  CreateModelInstanceRequest.md  CreateModelInstanceResponse.md  DeleteModelInstanceRequest.md  EpisodeInfo.md  ErrorResponse.md  InferRequest.md  InferResponse.md  LearnRequest.md  LearnResponse.md  ModelInstance.md  ModelInstanceParameters.md  ModelInstanceState.md  ModelsApi.md  NotFoundResponse.md  PingResponse.md  ServerApi.md  ServerInfo.md  SuccessResponse.md  TokenGenerateResponse.md  TokenRolesResponse.md  UnauthorizedResponse.md
openapi/client/rxinfer_openapi/: rest.py  (+3 more)
openapi/swagger-ui/: index.html
scripts/: wait_for_server.py
search/: search_index.json
src/: rxinferclient_README.md
src/rxinfer_client/: __init__.py  client.py
src/rxinferclient/: client.py
tests/: conftest.py  test_client.py
(+67 files in other folders)
