[project]
name = "rxinfer-client"
version = "0.0.1"
authors = [
  { name="Lazy Dynamics", email="info@lazydynamics.com" },
]
description = "The official Python library for the RxInfer API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License"
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "niquests",
  "rxinfer_openapi @ {root:uri}/openapi/client"
]

[project.optional-dependencies]
dev = [
  "hatchling",
  "twine",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "black",
  "isort",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-render-swagger-plugin",
  "pymdown-extensions"
]

[project.urls]
Homepage = "https://github.com/lazydynamics/RxInferClient.py"
Repository = "https://github.com/lazydynamics/RxInferClient.py"
Issues = "https://github.com/lazydynamics/RxInferClient.py/issues"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=rxinfer_client --cov-report=term-missing"